[tool.poetry]
name = "l33t"
version = "0.1.0"
description = ""
authors = ["Pieter <pbellens@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"
sortedcontainers = "^2.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
